# TavolaPerfetta

./: .gitignore  README.md  REAME.md  package-lock.json  package.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  seed.py
backend/app/: auth.py  config.py  main.py
backend/app/models/: __init__.py  delivery.py  haccp.py  inventory.py  invoice.py  location.py  order.py  price_history.py  product.py  recipe.py  restaurant.py  restaurant_member.py  supplier.py
backend/app/routers/: __init__.py  auth.py  deliveries.py  haccp.py  inventory.py  invoices.py  locations.py  ocr.py  orders.py  price_history.py  products.py  recipes.py  suppliers.py
backend/app/schemas/: __init__.py  delivery.py  haccp.py  inventory.py  invoice.py  location.py  order.py  price_history.py  product.py  recipe.py  supplier.py
backend/app/services/: seed.py
backend/migrations/: 001_add_multi_tenant.sql  001_full_schema.sql
backend/tests/: conftest.py  test_deliveries.py  test_haccp.py  test_inventory.py  test_invoices.py  test_locations.py  test_ocr.py  test_orders.py  test_price_history.py  test_products.py  test_recipes.py  test_suppliers.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: app-sidebar.tsx  data-table.tsx  kpi-card.tsx  location-comparison-chart.tsx  location-selector.tsx  nav-secondary.tsx  nav-user.tsx  page-header.tsx  protected-route.tsx  status-badge.tsx
frontend/src/lib/: api.ts  auth-context.tsx  i18n.tsx
frontend/src/types/: index.ts
src/app/: globals.css  layout.tsx
src/components/: alert-panel.tsx  app-sidebar.tsx  data-table.tsx  haccp-widget.tsx  language-toggle.tsx  nav-main.tsx  revenue-chart.tsx  site-header.tsx
src/data/mock/: home.ts  (+4 more)
src/lib/: i18n.tsx
src/types/: index.ts
(+29 files in other folders)
